========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2018-03-19

  - Fixed #239, HELP command should tolerate semicolons and whitespace.
    (Also, don't print shell commands in test (remove docstrings), we want the
    name of the tests to list, not the input.)


2018-03-13

  - Removed SIMPLE booking method and all traces of it, including the
    'booking_algorithm' option. Only the later (I hesitate to say "newer"
    because it's been around for years) FULL booking method is supported
    onwards.

  - Fixed #35: Implemented implicit group-by syntax. That is, if you omit the
    GROUP BY clause, it is automatically inferred to be the non-aggregate
    columns. This make writing the type of simple queries we do much more
    convenient and allows you to be a little sloppy.

  - Fixed bug with unit test util for docutil, which was stripping the first
    empty line of the docstring (and failing).


2018-03-02

  - Made the 'readline' library conditional, for Windows support.
    See PR46.


2018-02-23

  - Fixed #219: Restored sorting of the entries in the extractor. File order
    will have to be maintained by extracting the line no, which is used as a
    secondary key.


2018-02-19

  - Added prototype for converting Google Docs doc from docx and rst
    conversions, using the docx blocks to insert indented versions in the rst
    file.

  - Removed deprecated beancount.ops.prices module.


2018-02-17

  - Added an option to the CSV importer for the string separating the narration
    (default: "; ").

  - Merged a change submitted by @droogmic to add options for the dateutils
    parser, in order to disambiguate between day-first (DD-MM-YYYY) vs.
    month-first (MM-DD-YYYY) date representations.

  - Created a new plugin "check_closing" that automatically inserts a zero
    balance check after postings which are known - and flagged, using metadata -
    to be closing trades.
